:sparkles: feat: Adicionando a base lógica do login em PHP.

--- a/system/index.html
+++ b/system/index.html
@@ -18,20 +18,30 @@
             <span class="navbar-toggler-icon"></span>
         </button>
     </nav>
+
     <div class="login-container">
         <h2 class="text-center">Login</h2>
-        <form>
+
+        <!-- Exibe a mensagem de erro apenas se o parâmetro "erro" estiver na URL
+        <?php if (isset($_GET['erro']) && $_GET['erro'] == 1): ?>
+            <div class="alert alert-danger text-center">
+                Senha ou e-mail incorretos. Tente novamente.
+            </div>
+        <?php endif; ?>
+        -->
+
+        <form action="http://localhost/phpMorandi/login.php" method="POST">
             <div class="form-group">
                 <label for="email">E-mail</label>
-                <input type="email" class="form-control" id="email" placeholder="Digite seu e-mail" required>
+                <input type="email" class="form-control" id="email" name="email" placeholder="Digite seu e-mail" required>
             </div>
             <div class="form-group">
                 <label for="senha">Senha</label>
-                <input type="password" class="form-control" id="senha" placeholder="Digite sua senha" required>
+                <input type="password" class="form-control" id="senha" name="senha" placeholder="Digite sua senha" required>
             </div>
-            <a href="html/indexHomeOrganizador.html"><button type="submit" class="btn btn-primary btn-block">Entrar</button></a>
+            <button type="submit" class="btn btn-success btn-block">Entrar</button>
             <div class="text-center mt-3">
-                <a href="html/indexRecuperarSenha.html">Esqueceu a senha?</a>
+                <a href="indexRecuperarSenha.html">Esqueceu a senha?</a>
             </div>
         </form>
     </div>
