:bug: fix: Correção dos links entre as páginas indexPonto, indexRecuperarSenha e index

--- a/system/html/indexPonto.html
+++ b/system/html/indexPonto.html
@@ -18,7 +18,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link" href="../html/indexHomeFuncionário.html">Home</a>
+                <a class="nav-item nav-link" href="indexHomeFuncionario.html">Home</a>
             </div>
         </div>
     </nav>
