--- a/system/html/indexRecuperarSenha.html
+++ b/system/html/indexRecuperarSenha.html
@@ -26,7 +26,7 @@
                 <input type="email" class="form-control" id="email" placeholder="Digite seu e-mail" required>
             </div>
 
-            <a href="html/indexHomeOrganizador.html"><button type="submit" class="btn btn-primary btn-block">Entrar</button></a>
+            <a href="indexHomeOrganizador.html"><button type="submit" class="btn btn-primary btn-block">Entrar</button></a>
             <div class="text-center mt-3">
                 <a href="../index.html">Voltar ao login</a>
             </div>
