--- a/system/index.html
+++ b/system/index.html
@@ -41,7 +41,7 @@
             </div>
             <button type="submit" class="btn btn-success btn-block">Entrar</button>
             <div class="text-center mt-3">
-                <a href="indexRecuperarSenha.html">Esqueceu a senha?</a>
+                <a href="html/indexRecuperarSenha.html">Esqueceu a senha?</a>
             </div>
         </form>
     </div>
